fix two code smells #679